<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <integer name="com_vk_sdk_AppId">5951814</integer>
    <string name="ok_app_id">1250609664</string>
    <string name="ok_public_key">CBALMLILEBABABABA</string>
    <string name="ok_secret_key">430E52E3A3795772E67BEABB</string>
    <string name="ok_redirect_url">okauth://ok1250609664</string>
    <string name="facebook_app_id">112398619262011</string>
    <string name="app_name">Антиэвакуатор</string>
    <string name="title_activity_main">Антиэвакуатор</string>
    <string name="title_activity_evakuator_event">Уведомить владельца авто</string>
    <string name="title_user_account">Личный кабинет</string>
    <string name="title_received_event">Полученное событие</string>
    <string name="title_received_events_list">Полученные события</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyARz_nPXkCoHP45orbnORyfsMNHdfXtY-E</string>
    <string name="google_static_map_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBoPiHnLeYJpN-3Uo7G7LsVr5P-faW5OGg</string>
    <string name="make_photo">Сделать фото</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="hint_select_evacuator_location">Отметь местоположение эвакуатора и выбери фото</string>
    <string name="send_evacuator_event_button">Отправить сообщение владельцу</string>
    <string name="OK">ОК</string>
    <string name="recapture">Переснять</string>
    <string name="cancel">Отмена</string>
    <string name="vk_button">ВКонтакте</string>
    <string name="share">Поделиться</string>
    <string name="some_function_cant_work">Некоторые функции приложения могут оказаться недоступны (требуется разрешение на геолокацию)</string>
    <string name="offer_location_enabled">Для удобства использования рекомендуем включить определение местоположения</string>
    <string name="length_car_number_is_wrong">Длина гос. номера авто должна равняться 11 или 12 символам (с регионом)</string>
    <string name="length_phone_number_is_wrong">Длина номера телефона должна быть 10 символов (код страны указывать не нужно)</string>
    <string name="car_number_is_wrong">Некорректный номер авто</string>
    <string name="car_region_is_wrong">Некорректный регион</string>
    <string name="car_country_is_wrong">Некорректная страна</string>
    <string name="wrong_car_number">Формат гос. номера авто указан неверно. Пример: (с258ав25rus)</string>
    <string name="failed_load_photo">Не удалось отправить фото. Проверьте интернет-соединение и попробуйте снова.</string>
    <string name="failed_send">Не удалось соединиться с сервером. Попробуйте позже.</string>
    <string name="not_have_internet">Нет интернета. Проверьте соединение и повторите попытку.</string>
    <string name="bad_coordinates">Неверно определились координаты, попробуйте снова.</string>
    <string name="success_register">Вы успешно зарегистрировались!</string>
    <string name="account_info_was_changes">Данные успешно изменены!</string>
    <string name="account_was_deleted">Аккаунт успешно удалён!</string>
    <string name="account_info_update_error">Не удалось изменить данные, по причине:</string>
    <string name="account_delete_error">Не удалось удалить аккаунт, по причине:</string>
    <string name="need_password_for_delete_account">Для удаления аккаунта заполните поле "текущий пароль"</string>
    <string name="wrong_password">Пароль указан неверно. Введите снова</string>
    <string name="wrong_email">Введен некорректный почтовый адрес. Он не будет сохранен.</string>
    <string name="shared_ok">Запись успешна размещена на вашей стене! Спасибо!</string>
    <string name="hint_input_car_number_registration">Номер вашего авто (с регионом)</string>
    <string name="hint_input_car_number_event">Номер а/м</string>
    <string name="hint_input_car_region_event">Регион</string>
    <string name="hint_input_car_country_event">Страна</string>
    <string name="hint_pattern_car_number">Введи номер а/м и нажми кнопку \"+\" \nОбразец: с065мк78rus</string>
    <string name="hint_pattern_car_number_for_registration_dialog">Введи номер а/м\nОбразец: с065мк78rus</string>
    <string name="hint_message_for_car_owner">Сообщение для владельцев авто</string>
    <string name="hint_input_phone_number">Укажите ваш номер телефона</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="send_photo">Отправляю фото...</string>
    <string name="send_evakuator_event">Соединяюсь с сервером...</string>
    <string name="accept_send_event">Успех!</string>
    <string name="accept_send_evakuator_event_info_user_exist"><xliff:g id="quantity">%1$s</xliff:g> пользователей получат ваше сообщение и, возможно, захотят вас отблагодарить!</string>
    <string name="accept_send_evakuator_event_info_user_not_exist">Спасибо за вашу информацию!</string>
    <string name="send_register_data">Регистрирую...</string>
    <string name="update_account_info">Сохраняю данные...</string>
    <string name="register_menu_item">Регистрация</string>
    <string name="user_account_menu_item">Личный кабинет</string>
    <string name="user_have_car">У меня есть авто</string>
    <string name="birthday">Дата рождения:</string>
    <string name="my_cars">Мои авто:</string>
    <string name="car_number">Гос. номер:</string>
    <string name="change_password">Смена пароля:</string>
    <string name="new_password">Новый пароль</string>
    <string name="old_password">Текущий пароль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="wrong_old_password">Текущий пароль введен неверно. Попробуйте снова.</string>
    <string name="change_birthday">(Щелкните для выбора даты)</string>
    <string name="email">e-mail:</string>
    <string name="cars_list">Добавленные авто:</string>
    <string name="notification_title">У вас новое событие!</string>
    <string name="notification_text">Кто-то написал вам! Нажмите, чтобы прочесть</string>
    <string name="message">Текст:</string>
    <string name="header">В <xliff:g example="14:30" id="time">%1$s</xliff:g> зарегистрировано событие:</string>
    <string name="donate">Отблагодарить сообщившего</string>
    <string name="reject_donate">Не благодарить</string>
    <string name="donated">Отблагодарил</string>
    <string name="not_donated">Не благодарил</string>
    <string name="error_car_number">Некорректный номер авто</string>
    <string name="error_none_cars">Не указано ни одного номера авто</string>
    <string name="error_phone_number">Некорректный номер телефона</string>
    <string name="VK_title">ВКонтакте</string>
    <string name="OK_title">Одноклассники</string>
    <string name="remade_photo">Сфотографировать заново</string>
    <string name="add_car">Добавить авто</string>
    <string name="error">Ошибка:</string>
    <string name="event_list_menu_item">Принятые уведомления</string>
    <string name="hint_default_password">*Ваш текущий пароль - это ваш номер телефона, в формате "7XXXXXXXXXX". Рекомендуется сменить его на более надежный.</string>
    <string name="info_about_title">О сервисе:</string>
    <string name="about_menu_item">О сервисе</string>
    <string name="info_about">Мобильное приложение, позволяющее водителю предотвратить эвакуацию его автомобиля.</string>
    <string name="how_to_title">Как это работает:</string>
    <string name="how_to_part_1">Если Вы увидели, как эвакуатор забирает автомобиль, Вы можете помочь его владельцу, сделав фото эвакуатора и ввести номер эвакуируемого автомобиля. Если владелец ранее регистрировался, то ему придет уведомление и возможно он успеет прервать эвакуацию.</string>
    <string name="how_to_part_2">Также можно отправить сообщение владельцу автомобиля (Например Ваш автомобиль мешает выезду…).</string>
    <string name="info_end">По статистике большинство владельцев эвакуированных автомобилей  не знали о том, что их автомобиль припаркован неправильно. Помогите жителям нашего города стать лучше ))</string>

</resources>
