<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/register"
        app:showAsAction="never"
        android:title="@string/register_menu_item"/>
    <item
        android:id="@+id/user_account"
        app:showAsAction="never"
        android:title="@string/user_account_menu_item"/>

    <item
        android:id="@+id/event_list"
        app:showAsAction="never"
        android:title="@string/event_list_menu_item"/>

    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"/>

    <item
        android:id="@+id/about"
        app:showAsAction="never"
        android:title="@string/about_menu_item"/>


</menu>