<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.satir.antievakuator.activities.InfoActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_about_title"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textStyle="italic|bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_about"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_title"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="italic|bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_part_1"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_part_2"
        android:gravity="center_horizontal"
        android:layout_marginTop="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_end"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>



</LinearLayout>
