<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/camera_activity_layout">

    <SurfaceView
        android:id="@+id/activity_camera_surface_vie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageButton
        android:id="@+id/camera_activity_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_camera_alt_black_35dp"
        style="@style/MyButtonStyle"/>

    <LinearLayout
        android:id="@+id/camera_activity_input_car_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="invisible"
        android:background="@color/white">

    <EditText
        android:id="@+id/camera_activity_input_car_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="12"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/hint_input_car_number_registration"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_pattern_car_number"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/camera_activity_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom|center_horizontal">

            <Button
                android:id="@+id/camera_activity_finish"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/OK"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/camera_activity_recapture"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/recapture"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>